--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,22 +5,15 @@
     android:layout_height="match_parent"
     >
 
-    <fragment
-        android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context="com.loopbookinc.sonder.mapstest" />
-
     <RelativeLayout
         android:id="@+id/relLayout1"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/white_border"
-        android:elevation="10dp"
+        android:elevation="2dp"
         android:visibility="visible">
 
         <ImageView
@@ -28,7 +21,8 @@
             android:layout_width="15dp"
             android:layout_height="15dp"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
+            android:contentDescription="@string/todo"
             android:src="@drawable/ic_magnify" />
 
         <EditText
@@ -36,13 +30,39 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_centerVertical="true"
-            android:layout_toRightOf="@id/ic_magnify"
+            android:layout_marginEnd="50dp"
+            android:layout_toEndOf="@id/ic_magnify"
             android:background="@null"
-            android:hint="Enter Address, City or Zip Code"
+            android:cursorVisible="false"
+            android:hint="@string/enter_address_city_or_zip_code"
             android:imeOptions="actionSearch"
-            android:paddingLeft="10dp"
+            android:paddingStart="10dp"
             android:textColor="#000"
-            android:textSize="15dp" />
+            android:textSize="15sp" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/relLayout2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <Button
+            android:id="@+id/btnLocation"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginBottom="18dp"
+            android:layout_marginEnd="14dp"
+            android:background="@mipmap/ic_location_round" />
+
+        <com.google.android.gms.maps.MapView
+            android:id="@+id/mapView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true" />
+
     </RelativeLayout>
 
 </FrameLayout>
